@@ -22,6 +22,9 @@ PHP                                                                        NEWS
 - MySQLnd:
   . Fixed bug GH-11440 (authentication to a sha256_password account fails over
     SSL). (nielsdos)
+  . Fixed bug GH-11438 (mysqlnd fails to authenticate with sha256_password
+    accounts using passwords longer than 19 characters).
+    (nielsdos, Kamil Tekiela)
 
 - Opcache:
   . Fixed bug GH-11715 (opcache.interned_strings_buffer either has no effect or
